--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>MyResume Bootstrap Template - Index</title>
+  <title>Mayura Wijewickrama</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
 
@@ -59,14 +59,14 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
-      <h1>Brandon Johnson</h1>
-      <p>I'm <span class="typed" data-typed-items="Designer, Developer, Freelancer, Photographer"></span></p>
+      <h1>Mayura Wijewickrama</h1>
+      <p>I'm a <span class="typed" data-typed-items="Software Engineer, Tech Enthusiast, Freelance Developer, Photographer and Vlogger"></span></p>
       <div class="social-links">
-        <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://twitter.com/MayuraParaneeth" class="twitter" target="_blank"><i class="bx bxl-twitter"></i></a>
+        <a href="https://www.facebook.com/MMMPWijewickrama" class="facebook" target="_blank"><i class="bx bxl-facebook"></i></a>
+        <a href="https://www.instagram.com/mayura.wijewickrama" class="instagram" target="_blank"><i class="bx bxl-instagram"></i></a>
+        <a href="#" title="mayura.net" class="google-plus" target="_blank"><i class="bx bxl-skype"></i></a>
+        <a href="https://www.linkedin.com/in/mayura-wijewickrama-01" class="linkedin" target="_blank"><i class="bx bxl-linkedin"></i></a>
       </div>
     </div>
   </section><!-- End Hero -->
@@ -79,7 +79,10 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>An adaptable and responsible graduate passionated about computer software development. Throughout my career I successfully combined my studies with work and other commitments showing myself to be self-motivated, organized and capable of working under pressure. I have a clear, logical mind with a practical approach to problem solving and a drive to see things through to completion. I
+            enjoy working on my own initiative or in a team. In short, I am reliable, trustworthy, hardworking and eager to learn.</p>
+            
+           <p> I'm useed to read articles related to Front end/Back end new web technologies to keep my knowledge up to date. I am working on a personal Software products as a hobby. I like to travel whenever I can. hang out with friends and of course to eat and drink :D </p>
         </div>
 
         <div class="row">
@@ -87,7 +90,7 @@
             <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
-            <h3>UI/UX Designer &amp; Web Developer.</h3>
+            <h3>Software Engineer &amp; Web Developer.</h3>
             <p class="font-italic">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
               magna aliqua.
@@ -95,17 +98,17 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 1 May 1995</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> www.example.com</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +123 456 7890</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>City:</strong> City : New York, USA</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 26 December 1990</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> mayurapraneeth.github.io</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +94 78 523 6570</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Gampaha, Sri Lanka</li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 30</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> Master</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>PhEmailone:</strong> email@example.com</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 29</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> BSc (Hons) Computing</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> mayurawijawickrama@gmail.com</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Freelance:</strong> Available</li>
                 </ul>
               </div>
@@ -247,7 +250,7 @@
           <div class="col-lg-6">
             <h3 class="resume-title">Sumary</h3>
             <div class="resume-item pb-0">
-              <h4>Brandon Johnson</h4>
+              <h4>Mayura Wijewickrama</h4>
               <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
               <ul>
                 <li>Portland par 127,Orlando, FL</li>
@@ -692,7 +695,7 @@
   <!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="container">
-      <h3>Brandon Johnson</h3>
+      <h3>Mayura Wijewickrama</h3>
       <p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.</p>
       <div class="social-links">
         <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
