--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
         <div class="row">
           <div class="col-lg-4">
-            <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
+            <img src="assets/img/profile-img.jpg" class="img-fluid hover-change" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <h3>Software Engineer &amp; Web Developer.</h3>
@@ -737,61 +737,61 @@
 
           <div class="testimonial-item">
             <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
-            <h3>Saul Goodman</h3>
-            <h4>Ceo &amp; Founder</h4>
+            <h3>Vidurinda Sri Lankapura Wijesingha</h3>
+            <h4>Agrarian Development Divisional Officer / Executive Secretary at Agrarian Service Centre, Pallewela</h4>
             <p>
               <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-              Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium
-              quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
+              Mayura is a intelligent worker. He has broad knowledge in many technical areas. He always has brilliant ideas and never hesitate to put them into action. He is one of the few Engineers I know that are able to come up with very creative ideas and actually get the job done.
               <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+              <br><small>September 21, 2016, Vidurinda was a client of Mayura’s</small>
             </p>
           </div>
 
           <div class="testimonial-item">
             <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
-            <h3>Sara Wilsson</h3>
-            <h4>Designer</h4>
+            <h3>Renato Romani MD MBA</h3>
+            <h4>CEO | Founder EW2Health</h4>
             <p>
               <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-              Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis
-              quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.
+              I worked with Mayura developing a complex algorithm for medical science. I'm medical doctor without experience in programming and with a lot of patience Mayura builded an awesome solution, that is running almost for 4 years! 
               <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+              <br><small>October 8, 2019, Renato was a client of Mayura’s</small>
             </p>
           </div>
 
           <div class="testimonial-item">
             <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
-            <h3>Jena Karlis</h3>
-            <h4>Store Owner</h4>
+            <h3>Darshana Hemantha</h3>
+            <h4>Senior Software Engineer</h4>
             <p>
               <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-              Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim tempor
-              labore quem eram duis noster aute amet eram fore quis sint minim.
+              Mayura is very good team player all time and an expert in Angular.And also a expert in other technologies. He got a great sense of planning and solving problems around him. In other words, He is a perfect fit for any kind of challenge...
               <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+              <br><small>August 20, 2018, Mayura worked with Darshana in the same group</small>
             </p>
           </div>
 
           <div class="testimonial-item">
             <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
-            <h3>Matt Brandon</h3>
-            <h4>Freelancer</h4>
+            <h3>Parakrama Maralanda</h3>
+            <h4>Senior Software Engineer at ST Engineering</h4>
             <p>
               <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-              Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat minim velit minim
-              dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.
+              Mayura is the expert of PHP. He is professional, friendly, patient and responsible person. I have work with him and he is self motivated and intelligent team player , Both smart and professional, Trustworthy guy , Wish him all the best in future endeavors
               <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+              <br><small>October 14, 2017, Parakrama was senior to Mayura but didn’t manage directly</small>
             </p>
           </div>
 
           <div class="testimonial-item">
             <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
-            <h3>John Larson</h3>
-            <h4>Entrepreneur</h4>
+            <h3>Praveen De Silva</h3>
+            <h4>Senior Technical Project Manager</h4>
             <p>
               <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-              Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor noster veniam enim culpa
-              labore duis sunt culpa nulla illum cillum fugiat legam esse veniam culpa fore nisi cillum quid.
+              Mayura has been working with me for the past 2 years and I have trusted him with number of both local and foreign projects. The biggest trait I admire in him is his ability to function with minimum supervision, He feels the importance of taking ownership and highly capable in making a proper end to end delivery. 
               <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+              <br><small>July 18, 2017, Praveen managed Mayura directly</small>
             </p>
           </div>
 
