--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
           <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
             <div class="count-box">
               <i class="icofont-computer"></i>
-              <span data-toggle="counter-up">10</span>
+              <span data-toggle="counter-up">16</span>
               <p>Tech stack</p>
             </div>
           </div>
@@ -441,18 +441,16 @@
 
         <div class="section-title">
           <h2>Portfolio</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint
-            consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit
-            in iste officiis commodi quidem hic quas.</p>
+          <p>To solve business challenges with technology in a saturated web environment, innovative User Interface (UI) and User Experience (UX) designs that are device centric remain crucial pillars for success.It is my job to envision new ideas and develop products, services, spaces, and interactive experiences that bring them to life.</p>
         </div>
 
         <div class="row">
           <div class="col-lg-12 d-flex justify-content-center" data-aos="fade-up" data-aos-delay="100">
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-app">App</li>
-              <li data-filter=".filter-card">Card</li>
-              <li data-filter=".filter-web">Web</li>
+              <li data-filter=".filter-app">Web App</li>
+              <li data-filter=".filter-card">REST API</li>
+              <li data-filter=".filter-web">Web Sites</li>
             </ul>
           </div>
         </div>
@@ -475,7 +473,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -523,7 +521,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -539,7 +537,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -555,7 +553,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-7.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -571,7 +569,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-8.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -587,7 +585,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -614,9 +612,7 @@
 
         <div class="section-title">
           <h2>Services</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint
-            consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit
-            in iste officiis commodi quidem hic quas.</p>
+          <p>I help organisations to develop human centred solutions that deliver underlying economic benefits. Hire me to start this journey today. <br>Solve Your Business Challenges With Technology.</p>
         </div>
 
         <div class="row">
@@ -631,8 +627,8 @@
                 </svg>
                 <i class="bx bxl-dribbble"></i>
               </div>
-              <h4><a href="">Lorem Ipsum</a></h4>
-              <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
+              <h4><a href="">Web Development</a></h4>
+              <p>In a saturated web environment, innovative User Interface (UI) and User Experience (UX) designs that are device centric remain crucial pillars for success. To develop your unique online presence whether it be for an established business requiring capability enhancements or a start-up looking to disrupt industries. </p>
             </div>
           </div>
 
@@ -647,8 +643,10 @@
                 </svg>
                 <i class="bx bx-file"></i>
               </div>
-              <h4><a href="">Sed Perspiciatis</a></h4>
-              <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
+              <h4><a href="">Mobile Development</a></h4>
+              <p>I have developed in excess of 7 mobile applications and counting. This experience allows me to partner with you effectively to build engaging mobile applications that cater to your specific commercial needs. Whether its B2B, B2C or an internal solution, our team of certified application developers are ready to assist.
+
+              </p>
             </div>
           </div>
 
@@ -663,8 +661,10 @@
                 </svg>
                 <i class="bx bx-tachometer"></i>
               </div>
-              <h4><a href="">Magni Dolores</a></h4>
-              <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
+              <h4><a href="">Custom Software</a></h4>
+              <p>Whether you are a start-up looking to commercialise the next best software suite or an established business looking to drive specific business needs through a customised solution, the software development team at I can help you at every stage of the development life cycle.
+
+              </p>
             </div>
           </div>
 
@@ -678,8 +678,10 @@
                 </svg>
                 <i class="bx bx-layer"></i>
               </div>
-              <h4><a href="">Nemo Enim</a></h4>
-              <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis</p>
+              <h4><a href="">Internet of Things - IOT</a></h4>
+              <p>Today’s unprecedented rate of technological evolution is enabling a new period of possibilities - an era of digital business fueled by the Internet of Things (IoT). It`s time to stop running your business and start making it thrive.
+
+              </p>
             </div>
           </div>
 
@@ -693,8 +695,10 @@
                 </svg>
                 <i class="bx bx-slideshow"></i>
               </div>
-              <h4><a href="">Dele Cardo</a></h4>
-              <p>Quis consequatur saepe eligendi voluptatem consequatur dolor consequuntur</p>
+              <h4><a href="">BOT Development</a></h4>
+              <p>Having developed multiple chat bots across platforms such as Web, Facebook, Skype & WhatsApp I can assist in creating compelling and intuitive BOTs to suite your needs, ensuring a high degree of automation and lowered ongoing expenses.
+
+              </p>
             </div>
           </div>
 
@@ -708,8 +712,8 @@
                 </svg>
                 <i class="bx bx-arch"></i>
               </div>
-              <h4><a href="">Divera Don</a></h4>
-              <p>Modi nostrum vel laborum. Porro fugit error sit minus sapiente sit aspernatur</p>
+              <h4><a href="">Auxilary Services</a></h4>
+              <p>Further to our core offerings, I also specialise in digital design, white hat SEO, digital marketing, technology consulting & software maintenance services.              </p>
             </div>
           </div>
 
