--- a/index.html
+++ b/index.html
@@ -461,12 +461,12 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>App 1</h4>
-                <p>App</p>
+                <h4>Weekli</h4>
+                <p>Speak your mind. Act on facts.</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/portfolio-1.jpg" data-gall="portfolioGallery" class="venobox"
                     title="App 1"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe"
+                  <a href="portfolio-details1.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe"
                     class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -477,12 +477,12 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Web 3</h4>
-                <p>Web</p>
+                <h4>iQueBox</h4>
+                <p>Queue Management System</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/portfolio-2.jpg" data-gall="portfolioGallery" class="venobox"
                     title="Web 3"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe"
+                  <a href="portfolio-details2.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe"
                     class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -493,12 +493,12 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>App 2</h4>
-                <p>App</p>
+                <h4>Medical Billing Technologies</h4>
+                <p>Serving educational agencies in Medi-Cal reimbursement programs</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/portfolio-3.jpg" data-gall="portfolioGallery" class="venobox"
                     title="App 2"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe"
+                  <a href="portfolio-details3.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe"
                     class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -509,12 +509,12 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Card 2</h4>
-                <p>Card</p>
+                <h4>Sinque</h4>
+                <p>A new way to track, predict and monitor your weight.</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/portfolio-4.jpg" data-gall="portfolioGallery" class="venobox"
                     title="Card 2"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe"
+                  <a href="portfolio-details4.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe"
                     class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -525,12 +525,13 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Web 2</h4>
-                <p>Web</p>
+                <h4>Znapify</h4>
+                <p>Capture, print and share your moments with Znapify.
+                </p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/portfolio-5.jpg" data-gall="portfolioGallery" class="venobox"
                     title="Web 2"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe"
+                  <a href="portfolio-details5.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe"
                     class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -541,12 +542,12 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>App 3</h4>
-                <p>App</p>
+                <h4>Gigstr</h4>
+                <p>The app where you earn money by working flexibly within events, marketing, service and in stores for companies across the Nordics</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/portfolio-6.jpg" data-gall="portfolioGallery" class="venobox"
                     title="App 3"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe"
+                  <a href="portfolio-details6.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe"
                     class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -557,12 +558,12 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-7.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Card 1</h4>
-                <p>Card</p>
+                <h4>Testo</h4>
+                <p>Measure Smart. Measure Everything</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/portfolio-7.jpg" data-gall="portfolioGallery" class="venobox"
                     title="Card 1"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe"
+                  <a href="portfolio-details7.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe"
                     class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -573,12 +574,12 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-8.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Card 3</h4>
-                <p>Card</p>
+                <h4>Sri Lanka Foreign Employment Agency</h4>
+                <p>The sole state owned foreign employment company in Sri Lanka</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/portfolio-8.jpg" data-gall="portfolioGallery" class="venobox"
                     title="Card 3"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe"
+                  <a href="portfolio-details8.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe"
                     class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -589,12 +590,12 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Web 3</h4>
-                <p>Web</p>
+                <h4>Ticketbounty</h4>
+                <p>Online Ticketing System Australia</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/portfolio-9.jpg" data-gall="portfolioGallery" class="venobox"
                     title="Web 3"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe"
+                  <a href="portfolio-details9.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe"
                     class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -791,7 +792,43 @@
               <br><small>July 18, 2017, Praveen managed Mayura directly</small>
             </p>
           </div>
+          <div class="testimonial-item">
+            <img src="assets/img/testimonials/testimonials-6.jpg" class="testimonial-img" alt="">
+            <h3>Shashintha Senanayake</h3>
+            <h4>Poodell Technology(Pvt)Ltd</h4>
+            <p>
+              <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+              I had a great pleasure of working with Mayura throughout the university life.
+He has a great ability to work as a team and also he is very helpful and joyful person while doing any activity. He presented his hard working ability when doing software projects as well as other extra activities.
+<br>
+I would highly recommend Mayura as a part of any activity.
+              <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+              <br><small>June 27, 2017, Shashintha and Mayura were students together</small>
+            </p>
+          </div>
 
+          <div class="testimonial-item">
+            <img src="assets/img/testimonials/testimonials-7.jpg" class="testimonial-img" alt="">
+            <h3>Rohan Perera</h3>
+            <h4>CEO at Web dyno solutions</h4>
+            <p>
+              <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+              I had the pleasure working with Mayura,he is a highly skilled , self motivated , hard working Software Engineer with can do attitude . he is a very helpful and friendly character, he would be a great asset to any company.
+              <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+              <br><small>July 8, 2017, Mayura worked with Rohan in the same group</small>
+            </p>
+          </div>
+          <div class="testimonial-item">
+            <img src="assets/img/testimonials/testimonials-8.jpg" class="testimonial-img" alt="">
+            <h3>Dilani Chandrasekara</h3>
+            <h4>Web Designer & Coordinator</h4>
+            <p>
+              <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+              I have worked with him in few projects. He is a very talented developer. One great thing I noticed in him is that he is very dedicated to the work. Ultimately he somehow completed his job sacrificing his other tasks. He is a very good team player and a communicator too.
+              <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+              <br><small>June 29, 2017, Dilani and Mayura were students together</small>
+            </p>
+          </div>
         </div>
 
       </div>
