--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
 
+  <meta property="og:title" content="Mayura Wijewickrama" />
+  <meta property="og:type" content="Portfolio" />
+  <meta property="og:url" content="https://mayurapraneeth.github.io/" />
+  <meta property="og:image:url" content="https://mayurapraneeth.github.io/assets/img/profile-img2.jpg" />
+  <meta property="og:description" content="An adaptable and responsible graduate passionated about computer software development." />
+
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
@@ -425,7 +431,7 @@
               <h4>Diploma in Computer Studies</h4>
               <h5>2011</h5>
               <p><em>Supra vocational training and Career Guidance Institute</em></p>
-               
+
             </div>
           </div>
 
@@ -441,7 +447,10 @@
 
         <div class="section-title">
           <h2>Portfolio</h2>
-          <p>To solve business challenges with technology in a saturated web environment, innovative User Interface (UI) and User Experience (UX) designs that are device centric remain crucial pillars for success.It is my job to envision new ideas and develop products, services, spaces, and interactive experiences that bring them to life.</p>
+          <p>To solve business challenges with technology in a saturated web environment, innovative User Interface (UI)
+            and User Experience (UX) designs that are device centric remain crucial pillars for success.It is my job to
+            envision new ideas and develop products, services, spaces, and interactive experiences that bring them to
+            life.</p>
         </div>
 
         <div class="row">
@@ -543,7 +552,8 @@
               <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Gigstr</h4>
-                <p>The app where you earn money by working flexibly within events, marketing, service and in stores for companies across the Nordics</p>
+                <p>The app where you earn money by working flexibly within events, marketing, service and in stores for
+                  companies across the Nordics</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/portfolio-6.jpg" data-gall="portfolioGallery" class="venobox"
                     title="App 3"><i class="bx bx-plus"></i></a>
@@ -613,7 +623,8 @@
 
         <div class="section-title">
           <h2>Services</h2>
-          <p>I help organisations to develop human centred solutions that deliver underlying economic benefits. Hire me to start this journey today. <br>Solve Your Business Challenges With Technology.</p>
+          <p>I help organisations to develop human centred solutions that deliver underlying economic benefits. Hire me
+            to start this journey today. <br>Solve Your Business Challenges With Technology.</p>
         </div>
 
         <div class="row">
@@ -629,7 +640,10 @@
                 <i class="bx bxl-dribbble"></i>
               </div>
               <h4><a href="">Web Development</a></h4>
-              <p>In a saturated web environment, innovative User Interface (UI) and User Experience (UX) designs that are device centric remain crucial pillars for success. To develop your unique online presence whether it be for an established business requiring capability enhancements or a start-up looking to disrupt industries. </p>
+              <p>In a saturated web environment, innovative User Interface (UI) and User Experience (UX) designs that
+                are device centric remain crucial pillars for success. To develop your unique online presence whether it
+                be for an established business requiring capability enhancements or a start-up looking to disrupt
+                industries. </p>
             </div>
           </div>
 
@@ -645,7 +659,10 @@
                 <i class="bx bx-file"></i>
               </div>
               <h4><a href="">Mobile Development</a></h4>
-              <p>I have developed in excess of 7 mobile applications and counting. This experience allows me to partner with you effectively to build engaging mobile applications that cater to your specific commercial needs. Whether its B2B, B2C or an internal solution, our team of certified application developers are ready to assist.
+              <p>I have developed in excess of 7 mobile applications and counting. This experience allows me to partner
+                with you effectively to build engaging mobile applications that cater to your specific commercial needs.
+                Whether its B2B, B2C or an internal solution, our team of certified application developers are ready to
+                assist.
 
               </p>
             </div>
@@ -663,7 +680,9 @@
                 <i class="bx bx-tachometer"></i>
               </div>
               <h4><a href="">Custom Software</a></h4>
-              <p>Whether you are a start-up looking to commercialise the next best software suite or an established business looking to drive specific business needs through a customised solution, the software development team at I can help you at every stage of the development life cycle.
+              <p>Whether you are a start-up looking to commercialise the next best software suite or an established
+                business looking to drive specific business needs through a customised solution, the software
+                development team at I can help you at every stage of the development life cycle.
 
               </p>
             </div>
@@ -680,7 +699,9 @@
                 <i class="bx bx-layer"></i>
               </div>
               <h4><a href="">Internet of Things - IOT</a></h4>
-              <p>Today’s unprecedented rate of technological evolution is enabling a new period of possibilities - an era of digital business fueled by the Internet of Things (IoT). It`s time to stop running your business and start making it thrive.
+              <p>Today’s unprecedented rate of technological evolution is enabling a new period of possibilities - an
+                era of digital business fueled by the Internet of Things (IoT). It`s time to stop running your business
+                and start making it thrive.
 
               </p>
             </div>
@@ -697,7 +718,9 @@
                 <i class="bx bx-slideshow"></i>
               </div>
               <h4><a href="">BOT Development</a></h4>
-              <p>Having developed multiple chat bots across platforms such as Web, Facebook, Skype & WhatsApp I can assist in creating compelling and intuitive BOTs to suite your needs, ensuring a high degree of automation and lowered ongoing expenses.
+              <p>Having developed multiple chat bots across platforms such as Web, Facebook, Skype & WhatsApp I can
+                assist in creating compelling and intuitive BOTs to suite your needs, ensuring a high degree of
+                automation and lowered ongoing expenses.
 
               </p>
             </div>
@@ -714,7 +737,8 @@
                 <i class="bx bx-arch"></i>
               </div>
               <h4><a href="">Auxilary Services</a></h4>
-              <p>Further to our core offerings, I also specialise in digital design, white hat SEO, digital marketing, technology consulting & software maintenance services.              </p>
+              <p>Further to our core offerings, I also specialise in digital design, white hat SEO, digital marketing,
+                technology consulting & software maintenance services. </p>
             </div>
           </div>
 
@@ -739,7 +763,9 @@
             <h4>Agrarian Development Divisional Officer / Executive Secretary at Agrarian Service Centre, Pallewela</h4>
             <p>
               <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-              Mayura is a intelligent worker. He has broad knowledge in many technical areas. He always has brilliant ideas and never hesitate to put them into action. He is one of the few Engineers I know that are able to come up with very creative ideas and actually get the job done.
+              Mayura is a intelligent worker. He has broad knowledge in many technical areas. He always has brilliant
+              ideas and never hesitate to put them into action. He is one of the few Engineers I know that are able to
+              come up with very creative ideas and actually get the job done.
               <i class="bx bxs-quote-alt-right quote-icon-right"></i>
               <br><small>September 21, 2016, Vidurinda was a client of Mayura’s</small>
             </p>
@@ -751,7 +777,9 @@
             <h4>CEO | Founder EW2Health</h4>
             <p>
               <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-              I worked with Mayura developing a complex algorithm for medical science. I'm medical doctor without experience in programming and with a lot of patience Mayura builded an awesome solution, that is running almost for 4 years! 
+              I worked with Mayura developing a complex algorithm for medical science. I'm medical doctor without
+              experience in programming and with a lot of patience Mayura builded an awesome solution, that is running
+              almost for 4 years!
               <i class="bx bxs-quote-alt-right quote-icon-right"></i>
               <br><small>October 8, 2019, Renato was a client of Mayura’s</small>
             </p>
@@ -763,7 +791,9 @@
             <h4>Senior Software Engineer</h4>
             <p>
               <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-              Mayura is very good team player all time and an expert in Angular.And also a expert in other technologies. He got a great sense of planning and solving problems around him. In other words, He is a perfect fit for any kind of challenge...
+              Mayura is very good team player all time and an expert in Angular.And also a expert in other technologies.
+              He got a great sense of planning and solving problems around him. In other words, He is a perfect fit for
+              any kind of challenge...
               <i class="bx bxs-quote-alt-right quote-icon-right"></i>
               <br><small>August 20, 2018, Mayura worked with Darshana in the same group</small>
             </p>
@@ -775,7 +805,9 @@
             <h4>Senior Software Engineer at ST Engineering</h4>
             <p>
               <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-              Mayura is the expert of PHP. He is professional, friendly, patient and responsible person. I have work with him and he is self motivated and intelligent team player , Both smart and professional, Trustworthy guy , Wish him all the best in future endeavors
+              Mayura is the expert of PHP. He is professional, friendly, patient and responsible person. I have work
+              with him and he is self motivated and intelligent team player , Both smart and professional, Trustworthy
+              guy , Wish him all the best in future endeavors
               <i class="bx bxs-quote-alt-right quote-icon-right"></i>
               <br><small>October 14, 2017, Parakrama was senior to Mayura but didn’t manage directly</small>
             </p>
@@ -787,7 +819,9 @@
             <h4>Senior Technical Project Manager</h4>
             <p>
               <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-              Mayura has been working with me for the past 2 years and I have trusted him with number of both local and foreign projects. The biggest trait I admire in him is his ability to function with minimum supervision, He feels the importance of taking ownership and highly capable in making a proper end to end delivery. 
+              Mayura has been working with me for the past 2 years and I have trusted him with number of both local and
+              foreign projects. The biggest trait I admire in him is his ability to function with minimum supervision,
+              He feels the importance of taking ownership and highly capable in making a proper end to end delivery.
               <i class="bx bxs-quote-alt-right quote-icon-right"></i>
               <br><small>July 18, 2017, Praveen managed Mayura directly</small>
             </p>
@@ -799,9 +833,11 @@
             <p>
               <i class="bx bxs-quote-alt-left quote-icon-left"></i>
               I had a great pleasure of working with Mayura throughout the university life.
-He has a great ability to work as a team and also he is very helpful and joyful person while doing any activity. He presented his hard working ability when doing software projects as well as other extra activities.
-<br>
-I would highly recommend Mayura as a part of any activity.
+              He has a great ability to work as a team and also he is very helpful and joyful person while doing any
+              activity. He presented his hard working ability when doing software projects as well as other extra
+              activities.
+              <br>
+              I would highly recommend Mayura as a part of any activity.
               <i class="bx bxs-quote-alt-right quote-icon-right"></i>
               <br><small>June 27, 2017, Shashintha and Mayura were students together</small>
             </p>
@@ -813,7 +849,9 @@ I would highly recommend Mayura as a part of any activity.
             <h4>CEO at Web dyno solutions</h4>
             <p>
               <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-              I had the pleasure working with Mayura,he is a highly skilled , self motivated , hard working Software Engineer with can do attitude . he is a very helpful and friendly character, he would be a great asset to any company.
+              I had the pleasure working with Mayura,he is a highly skilled , self motivated , hard working Software
+              Engineer with can do attitude . he is a very helpful and friendly character, he would be a great asset to
+              any company.
               <i class="bx bxs-quote-alt-right quote-icon-right"></i>
               <br><small>July 8, 2017, Mayura worked with Rohan in the same group</small>
             </p>
@@ -824,7 +862,9 @@ I would highly recommend Mayura as a part of any activity.
             <h4>Web Designer & Coordinator</h4>
             <p>
               <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-              I have worked with him in few projects. He is a very talented developer. One great thing I noticed in him is that he is very dedicated to the work. Ultimately he somehow completed his job sacrificing his other tasks. He is a very good team player and a communicator too.
+              I have worked with him in few projects. He is a very talented developer. One great thing I noticed in him
+              is that he is very dedicated to the work. Ultimately he somehow completed his job sacrificing his other
+              tasks. He is a very good team player and a communicator too.
               <i class="bx bxs-quote-alt-right quote-icon-right"></i>
               <br><small>June 29, 2017, Dilani and Mayura were students together</small>
             </p>
