--- a/index.html
+++ b/index.html
@@ -5,9 +5,14 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Mayura Wijewickrama</title>
-  <meta content="" name="descriptison">
-  <meta content="" name="keywords">
+  <title>Mayura Wijewickrama | Portfolio</title>
+  <meta name="description" content="An adaptable and responsible graduate passionated about computer software development. Throughout my career
+  I successfully combined my studies with work and other commitments showing myself to be self-motivated,
+  organized and capable of working under pressure. I have a clear, logical mind with a practical approach to
+  problem solving and a drive to see things through to completion.">
+  <meta name="keywords" content="Software Engineer, Sri Lanka, JavaScript Developer, PHP Developer, Mayura Wijewickrama | Portfolio">
+  <meta name="author" content="Mayura Wijewickrama">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
   <meta property="og:title" content="Mayura Wijewickrama" />
   <meta property="og:type" content="Portfolio" />
