--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <meta name="author" content="Mayura Wijewickrama">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
-  <meta property="og:title" content="Mayura Wijewickrama" />
+  <meta property="og:title" content="Mayura Wijewickrama | Portfolio" />
   <meta property="og:type" content="Portfolio" />
   <meta property="og:url" content="https://mayurapraneeth.github.io/" />
   <meta property="og:image:url" content="https://mayurapraneeth.github.io/assets/img/profile-img2.jpg" />
